--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header nav ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header nav ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -86,6 +86,7 @@ p {
     background-color: #2589bd;
 }
 
+/* consolidated repetative CSS elements */
 .benefit-lead, 
 .benefit-brand, 
 .benefit-cost {
@@ -93,6 +94,7 @@ p {
     color: #ffffff;
 }
 
+/* consolidated repetative CSS elements */
 .benefit-lead h3, 
 .benefit-brand h3, 
 .benefit-cost h3 {
@@ -100,6 +102,7 @@ p {
     text-align: center;
 }
 
+/* consolidated repetative CSS elements */
 .benefit-lead img, 
 .benefit-brand img, 
 .benefit-cost img {
@@ -108,6 +111,7 @@ p {
     max-width: 150px;
 }
 
+/* consolidated repetative CSS elements */
 .search-engine-optimization, 
 .online-reputation-management, 
 .social-media-marketing {
@@ -119,12 +123,14 @@ p {
     color: #ffffff;
 }
 
+/* consolidated repetative CSS elements */
 .search-engine-optimization img, 
 .online-reputation-management img, 
 .social-media-marketing img {
     max-height: 200px;
 }
 
+/* consolidated repetative CSS elements */
 .search-engine-optimization h2, 
 .online-reputation-management h2, 
 .social-media-marketing h2 {
